Add utf-8 charset meta tag to website

--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,8 @@
+<!-- Make it id as utf8 -->
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>SWAG App</title>
   </head>
   <body>
