Make privacy html better, including utf8 (#25)

--- a/website/privacy.html
+++ b/website/privacy.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SWAG Communicator - integritetspolicy</title>
+  </head>
   <body>
     <pre>
 Sekretesspolicy för SWAG Communicator
@@ -21,7 +27,8 @@ Som användare av SWAG Communicator har du rätt att få tillgång till och rade
 personuppgifter. För att begära detta, vänligen kontakta Mikael Grön på
 skaramicke@gmail.com. Vi kommer att skyndsamt hantera din begäran och radera alla spår av
 dina uppgifter från vår databas.
-</pre
+    
+  </pre
     >
   </body>
 </html>
