--- a/website/index.html
+++ b/website/index.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>SWAG App</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f4f4f4;
+      }
+
+      .container {
+        text-align: center;
+      }
+
+      .app {
+        margin: 20px;
+      }
+
+      /* Responsive text size for smaller devices */
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 24px;
+        }
+
+        .app a {
+          font-size: 20px;
+        }
+      }
+    </style>
     <script>
       window.onload = function () {
         fetch('https://api.github.com/repos/skaramicke/swagapp/releases/latest')
