Update AppStore Linn (#84)
Co-authored-by: Imamyable <37723862+Imamyable@users.noreply.github.com>

--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
     <div class="container">
       <h1>SWAG App</h1>
       <div class="app">
-        <a href="https://apple.com">Ladda ner från Apple Appstore</a>
+        <a href="https://apps.apple.com/se/app/swag-communiator/id6472608847">Ladda ner från Apple Appstore</a>
       </div>
       <div class="app">
         <a id="apkLink" href="#">Ladda ner Android-appen</a>
